fix: Tweaks to spacing.

--- a/gnome-shell/src/gnome-shell-sass/widgets/_workspace-thumbnails.scss
+++ b/gnome-shell/src/gnome-shell-sass/widgets/_workspace-thumbnails.scss
@@ -4,7 +4,7 @@
 .workspace-thumbnails {
   @extend %overview_panel;
   visible-width: 32px; //amount visible before hover
-  margin: 0px 12px 100px 12px;
+  margin: 0px 12px 150px 12px;
   spacing: 24px;
   padding: 24px;
   border-radius: $modal_radius;
